<resources>
    <string name="app_name">AudiobookApp</string>
    <string name="title_library">Library</string>
    <string name="title_now_playing">Now Playing</string>
    <string name="title_settings">Settings</string>
    <string name="page_title">Library</string>
    <string name="search">Search</string>
    <string name="content_description_search">Search audiobooks</string>
    <string name="progress_text_view">%s%% read</string>
    <string name="progress_text_view_simple">%s%%</string>
    <string name="search_hint">Search library</string>
    <string name="duration">%s</string>
    <string name="sleep_timer_shared_pref_name">SleepTimer</string>
    <string name="sleep_timer_is_set_shared_pref_key">sleepTimerIsSet</string>
    <string name="cancle_sleep_timer_dialog_title">Cancel Sleep Timer?</string>
    <!-- Input Dialog -->
    <string name="input_title">Search</string>
    <string name="input_message">Search for title, author, genre, ...</string>
    <string name="input_cancel">Cancel</string>
    <string name="input_accept">Search!</string>
    <string name="menu_add">Add</string>
    <string name="menu_switch_layout_list">Show as list</string>
    <string name="menu_switch_layout_grid">Show as grid</string>
    <string name="menu_settings">Settings</string>
    <string name="import_from_phone">Import from phone</string>
    <string name="import_from_google_drive">Import from Google Drive</string>
    <string name="player_title">Now playing</string>
    <string name="cast_to_device">Cast to device</string>
    <string name="select_chapter">Select chapter</string>
    <string name="set_sleep_timer">Set sleep timer</string>
    <string name="equalizier">Equalizier</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="ic_moon_descr">Moon</string>
    <string name="cancel_button">Cancel</string>
    <string name="set_button">Set</string>
    <string name="stop_in_button">Stop in</string>
    <string name="stop_at_button">Stop at</string>
    <string name="playback_stop_info_at">Playback will stop at %s</string>
    <string name="playback_stop_info_in">Playback will stop in %d hours and %d minutes</string>
    <string name="playback_stop_info_in_no_hours">Playback will stop in %d minutes</string>
    <string name="sleep_timer_error">SleepTimer has to be at least one minute long!</string>
    <string name="chapters">Chapters</string>
</resources>