<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        android:contentDescription="@string/content_description_search"
        app:showAsAction="collapseActionView|ifRoom"/>

    <item
        android:id="@+id/menu_add"
        android:title="@string/menu_add"
        android:icon="@drawable/ic_add"
        android:contentDescription="Test"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_switch_layout"
        android:title="@string/menu_switch_layout_list"
        android:icon="@drawable/ic_list"
        android:contentDescription=""
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_settings"
        android:contentDescription=""
        app:showAsAction="never"/>

</menu>